--- a/index.html
+++ b/index.html
@@ -1,1 +1,125 @@
-Hello World
+<!doctype html>
+<html lang="en">
+
+<head>
+	<title>Shashidhar GM</title>
+	<link rel="stylesheet" href="style.css"/>
+</head>
+
+<body>
+<div class="main">
+<div id="left_menu">
+
+<center><img class="img_tag" src="img/boy1.png" height="200px" width="200px"/>
+<p id="myname"><b>Shashidhar G. M</b></p></center
+
+
+<ul id="list">
+<!--<div class="icon_div">
+	<li class="no_bullets" >	<a class="icon" href="index.html" ><img src="img/home.png"/> Home</a></li>
+</div>
+<div class="icon_div">
+	<li class="no_bullets" >	<a class="icon" href="about.html" ><img src="img/contact.png"/> Contact</a></li>
+</div>
+
+</ul>
+-->
+<pre style="font-size:15px;">
+<!--Hi!, I'm Shashidhar Mayannavar. 
+I have done engineering from 
+<a href="http://klescet.ac.in/"target="_blank"	>KLECET, Belgaum</a>. Currently,
+I'm working on Android platform.
+-->
+<center>
+I am an Computer Science Engineer
+guy. CurrentlyI am working on 
+Android platform. I am also good
+at Web Designing. 
+ </center></pre>
+ <br><br>
+ <center>
+<div id="social">
+<ul>
+<li><a href="https://in.linkedin.com/in/shashidhargm" target="_blank"><img src="img/in.png" target="_blank"/></a></li>
+<li><a href="http://www.facebook.com/shashidhar.mayannavar" target="_blank"><img src="img/fb.png" /></a></li>
+<li><a href="https://twitter.com/shashidhargm93" target="_blank"><img src="img/twitter.png" /></a></li>
+</ul>
+
+</div>
+<center>&copy Shashidhar G M. 2016 </center>
+</div>
+
+<div id="right_menu">
+<p id="name1">Shashidhar Mayannavar</p>
+<!--<p id="pos">Android Developer</p>-->
+<div class="heading1"> <b>EXPERIENCE SUMMARY:</b></div>
+<pre class="summary">
+Designed and Developed CRM Android application, which would help in better understanding between our
+clients and the product. Currently, working on Android and exploring its features. 
+</pre>
+<div class="heading1"> <b>SOFTWARE APPLICATIONS AND LANGUAGES:  </b></div>
+<pre class="summary">
+Languages: C, C++, Java, JavaScript, SQL, HTML, CSS, PHP
+Tools & Technologies: Android SDK, Android Studio, Eclipse.
+Operating Systems: Windows, Linux
+
+</pre>
+<b>EDUCATION:</b>
+<pre class="summary">
+<b>Bachelor of Engineering, Computer Science 					2015</b>
+Visvesvaraya Technological University
+Grade: <b>59.3%</b>
+
+<b>Diploma, Computer Science and Engineering 					2012</b>
+The Department of Education Examination Board
+Grade: <b>72.32%</b>
+
+<b>SSLC, General 									2009</b>
+Karnataka Secondary Education Examination Board
+Grade: <b>73.76%</b>
+</pre>
+<div class="heading1"> <b>WORK EXPERIENCE:</b><pre></div>
+</pre><b>Software Trainee</b>
+<pre class="summary">
+<b>Webnish Software 								April, 2016 - Present</b>
+Webnish is a company which provides website for every business.It is conceived to take every business
+to an all-new level of success and growth, by equipping them with a complete and functional website.
+Now Webnish has come with new Product called Webnish Reach Android app, It is Customer Relationship
+Management application which will be helping users to interact with their clients and makes better 
+business.
+</pre>
+<div class="heading1"> <b>PROJECTS:</b><pre></div>
+</pre>
+<pre>
+<ul type="disc" id="projects">
+<li class="projectss"><b>Comments Summarizer -</b> Developed a web application which fetches comments from
+Facebook and summarizes the comments and generates a story. Python, NLTK, PHP, HTML.
+</li><li class="projectss"><b>Campus Radio -</b> This project takes audio from the microphone and computer software and will
+output the data to a specified port to the radio software program and then output the sound to the
+Radio. Java Swing, Microsoft Access.
+</li><li class="projectss"><b>Meter Reading App -</b> This is a cross platform mobile application which has automated taximeters
+concept. HTML, CSS, JQuery, Google Map APIs.
+</li><li class="projectss"> <b>Lab Program App -</b> This app is developed to make the lab programs of sixth semester available
+for students on their Android phone. This app works completely offline.
+http://v.gd/Lab_Programs.
+</li><li class="projectss">Created simple Message service application that will be sending, storing and receiving messages.
+AngularJS, HTML, PubNub, and Bower.
+</li><li class="projectss">Contribution to our college Alumni Association's website.
+</li>
+</ul>
+
+<!--<iframe src="pdf/ShashidharGM.html" style="width:800px; height:1100px;" frameborder="0"></iframe>-->
+
+<!--<embed src="ShashidharGM.pdf" width="800px" height="1100px"> -->
+
+
+
+</div>
+</div>
+<br/><br/>
+<footer>
+
+</footer>
+</body>
+
+</html>
